[gd_scene load_steps=10 format=2]

[ext_resource path="res://Textures/stars_milky_way_space_116893_1920x1080.jpg" type="Texture" id=1]
[ext_resource path="res://Textures/100_Dollar.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Lato-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Audio/coin.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/interface-click.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 63
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 1
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DollarButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 944.0
margin_top = 240.0
margin_right = 1547.0
margin_bottom = 497.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 2 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="."]
margin_left = 568.0
margin_top = 496.0
margin_right = 753.0
margin_bottom = 573.0
custom_colors/font_color = Color( 0.858824, 0.976471, 0.670588, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Label" parent="."]
margin_top = 640.0
margin_right = 154.0
margin_bottom = 725.0
custom_colors/font_color = Color( 0.0509804, 0.0784314, 0.780392, 1 )
custom_colors/font_outline_modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/font = SubResource( 2 )
text = "EXIT"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ExitButton" type="MenuButton" parent="Exit"]
margin_top = 8.0
margin_right = 160.0
margin_bottom = 80.0
items = [ "Element 0", null, 0, false, false, 0, 0, null, "", false ]

[node name="Shop" type="Label" parent="."]
margin_top = 544.0
margin_right = 160.0
margin_bottom = 629.0
custom_colors/font_color = Color( 0.0509804, 0.0784314, 0.780392, 1 )
custom_colors/font_outline_modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
custom_fonts/font = SubResource( 3 )
text = "Shop"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ShopButton" type="MenuButton" parent="Shop"]
margin_right = 160.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="InterfaceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="DollarButton" to="." method="_on_DollarButton_pressed"]
[connection signal="pressed" from="Exit/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Shop/ShopButton" to="." method="_on_ShopButton_pressed"]
